--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -3,13 +3,15 @@
   "position": "top",
 
   "modules-left": [
+    "custom/omarchy",
     "hyprland/workspaces",
-    "custom/spotify"
+    "custom/spotify",
+    "custom/weather"
   ],
 
   "modules-center": [
     "clock",
-    "custom/weather"
+    "custom/update",    
   ],
 
   "modules-right": [
@@ -17,7 +19,7 @@
     "backlight",
     "pulseaudio",
     "battery",
-    "network",
+    "custom/network",
     "bluetooth",
     "cpu",
     "memory",
@@ -49,12 +51,30 @@
       "5": []
     }
   },
+  
+  "custom/omarchy": {
+    "format": "<span font='omarchy'>\ue900</span>",
+    "on-click": "omarchy-menu",
+    "on-click-right": "omarchy-launch-terminal",
+    "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
+  },
 
-  "clock": { "timezone": "Africa/Casablanca", 
+  "custom/update": {
+    "format": "",
+    "exec": "omarchy-update-available",
+    "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
+    "tooltip-format": "Omarchy update available",
+    "signal": 7,
+    "interval": 21600
+  },
+
+  "clock": { 
+    "timezone": "Africa/Casablanca", 
     "format": "{:%A, %d %B %Y %H:%M:%S}", 
     "tooltip-format": "{:%A, %d %B %Y %H:%M:%S}", 
     "interval": 1 
   },
+
   "custom/uptime": {
     "format": " {}",
     "interval": 1600,
@@ -74,16 +94,10 @@
     "tooltip-format": "{timeTo} ({capacity}%)"
   },
 
-  "network": {
-    "interface": "wlan0",
-    "format-icons": ["󰤯","󰤟","󰤢","󰤥","󰤨"],
-    "format-wifi": "{icon} {ipaddr}",
-    "format-ethernet": "󰀂 {ipaddr}",
-    "format-disconnected": "󰤮",
-    "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes} ⇡{bandwidthUpBytes}",
-    "tooltip-format-ethernet": "⇣{bandwidthDownBytes} ⇡{bandwidthUpBytes}",
-    "tooltip-format-disconnected": "Disconnected",
-    "interval": 3,
+  "custom/network": {
+    "exec": "~/.config/waybar/scripts/network-info.sh",
+    "interval": 5,
+    "return-type": "json",
     "on-click": "omarchy-launch-wifi"
   },
 
@@ -98,18 +112,22 @@
 
   "cpu": {
     "interval": 1,
-    "format": " {usage:>2}%"
+    "format": " {usage:>2}%",
+    "on-click": "$TERMINAL -e btop"
   },
 
   "memory": {
     "interval": 30,
-    "format": "  {used:0.1f}G"
+    "format": "  {used:0.1f}G",
+    "on-click": "$TERMINAL -e btop"
   },
 
   "pulseaudio": {
     "format": "{icon}  {volume}%",
     "format-muted": "",
-    "format-icons": { "default": ["","",""] },
+    "format-icons": { 
+      "default": ["","",""] 
+    },
     "on-click": "$TERMINAL --class=Wiremix -e wiremix",
     "on-click-right": "pamixer -t"
   },
@@ -135,7 +153,8 @@
 
   "custom/spotify": {
     "exec": "~/.config/waybar/scripts/spotify-status.sh",
-    "interval": 5,
+    "interval": 2,
+    "on-click": "playerctl --player=spotify play-pause",
     "return-type": "json",
     "format": "{}"
   }
