feat: setup stow structure for nvim and tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,31 +1,80 @@
-# set a reload bind
+##### Reload config
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/tmux/tmux.conf \; display "tmux config reloaded"
 
+##### Terminal & colors
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
+##### Cursor (block)
+set -g cursor-style block
+
+##### Prefix Key
 set -g prefix C-s
+unbind C-b
+
+##### Mouse
 set -g mouse on
 
-bind-key h select-pane -L
-bind-key l select-pane -R  
-bind-key k select-pane -U
-bind-key j select-pane -D
+##### Vi mode (copy-mode only)
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 
-set-option -g status-position bottom
+#### Scrollback
+set -g history-limit 100000
 
-setw -g mode-keys vi
+##### REMOVE any no-prefix h/j/k/l
+unbind -n h
+unbind -n j
+unbind -n k
+unbind -n l
 
-# List of plugins
+# ##### Pane navigation (ONLY prefix + h/j/k/l)
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+
+##### Status bar
+set -g status-position top
+set -g status-style bg=default
+
+##### Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
+##### Theme: Melange-inspired #####
+# Palette inspired by savq/melange-nvim
+set -g status-style bg='#1e1e1e',fg='#c0b18b'
+set -g message-style bg='#2a2926',fg='#c0b18b'
+set -g pane-border-style fg='#3a3936'
+set -g pane-active-border-style fg='#c0b18b'
+set -g mode-style bg='#bdae93',fg='#1e1e1e'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+set -g status-left-length 60
+set -g status-left "#[fg=#8ba4b0,bg=#1e1e1e]#[fg=#1e1e1e,bg=#8ba4b0,bold] #S  #[fg=#8ba4b0,bg=#1e1e1e]"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+set -g status-right-length 120
+set -g status-right "#[fg=#1e1e1e]#[fg=#c0b18b,bg=#1e1e1e] 󰥔 %H:%M #[fg=#c0b18b] #[fg=#a89984]󰃭 %Y-%m-%d #[fg=#1e1e1e]#[fg=#d79921,bg=#1e1e1e] 󰅒 #(whoami)@#H "
+
+set -g window-status-format "#[fg=#7c6f64] 󰈚 #I:#W "
+set -g window-status-current-format "#[fg=#d5c4a1,bg=#3c3836,bold] 󰈚 #I:#W #[default]"
+set -g window-status-separator ""
+
+##### Pop-Up: Session List #####
+# prefix + w opens a custom tmux menu
+bind w display-popup -E -w 30% -h 50% ~/.config/tmux/scripts/tmux-menu.sh
+unbind w
+
+##### Auto Save / Restore
+set -g @resurrecti-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '1'
+
+##### TPM (keep last)
 run '~/.tmux/plugins/tpm/tpm'
-
-
