--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -3,13 +3,16 @@
   "position": "top",
 
   "modules-left": [
+    "custom/omarchy",
     "hyprland/workspaces",
-    "custom/spotify"
+    "custom/spotify",
+    "hyprland/window"
   ],
 
   "modules-center": [
     "clock",
-    "custom/weather"
+    "custom/weather",
+    "custom/update"
   ],
 
   "modules-right": [
@@ -17,7 +20,7 @@
     "backlight",
     "pulseaudio",
     "battery",
-    "network",
+    "custom/network",
     "bluetooth",
     "cpu",
     "memory",
@@ -39,6 +42,7 @@
       "7": "7",
       "8": "8",
       "9": "9",
+      "10": "0",
       "active": "󱓻"
     },
     "persistent-workspaces": {
@@ -49,12 +53,30 @@
       "5": []
     }
   },
+  
+  "custom/omarchy": {
+    "format": "<span font='omarchy'>\ue900</span>",
+    "on-click": "omarchy-menu",
+    "on-click-right": "xdg-terminal-exec",
+    "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
+  },
 
-  "clock": { "timezone": "Africa/Casablanca", 
+  "custom/update": {
+    "format": "",
+    "exec": "omarchy-update-available",
+    "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
+    "tooltip-format": "Omarchy update available",
+    "signal": 7,
+    "interval": 21600
+  },
+
+  "clock": { 
+    "timezone": "Africa/Casablanca", 
     "format": "{:%A, %d %B %Y %H:%M:%S}", 
     "tooltip-format": "{:%A, %d %B %Y %H:%M:%S}", 
     "interval": 1 
   },
+
   "custom/uptime": {
     "format": " {}",
     "interval": 1600,
@@ -74,16 +96,10 @@
     "tooltip-format": "{timeTo} ({capacity}%)"
   },
 
-  "network": {
-    "interface": "wlan0",
-    "format-icons": ["󰤯","󰤟","󰤢","󰤥","󰤨"],
-    "format-wifi": "{icon} {ipaddr}",
-    "format-ethernet": "󰀂 {ipaddr}",
-    "format-disconnected": "󰤮",
-    "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes} ⇡{bandwidthUpBytes}",
-    "tooltip-format-ethernet": "⇣{bandwidthDownBytes} ⇡{bandwidthUpBytes}",
-    "tooltip-format-disconnected": "Disconnected",
-    "interval": 3,
+  "custom/network": {
+    "exec": "~/.config/waybar/scripts/network-info.sh",
+    "interval": 5,
+    "return-type": "json",
     "on-click": "omarchy-launch-wifi"
   },
 
@@ -91,26 +107,32 @@
     "format": "",
     "icon-size": 25,
     "format-disabled": "󰂲",
-    "format-connected": "",
+    "format-off": "󰂲",
+    "format-connected": "󰂱",
+    "format-no-controller": "",
     "tooltip-format": "Devices connected: {num_connections}",
-    "on-click": "blueberry"
+    "on-click": "omarchy-launch-bluetooth"
   },
 
   "cpu": {
     "interval": 1,
-    "format": " {usage:>2}%"
+    "format": " {usage:>2}%",
+    "on-click": "omarchy-launch-or-focus-tui btop"
   },
 
   "memory": {
     "interval": 30,
-    "format": "  {used:0.1f}G"
+    "format": "  {used:0.1f}G",
+    "on-click": "omarchy-launch-or-focus-tui btop"
   },
 
   "pulseaudio": {
     "format": "{icon}  {volume}%",
     "format-muted": "",
-    "format-icons": { "default": ["","",""] },
-    "on-click": "$TERMINAL --class=Wiremix -e wiremix",
+    "format-icons": { 
+      "default": ["","",""] 
+    },
+    "on-click": "omarchy-launch-or-focus-tui wiremix",
     "on-click-right": "pamixer -t"
   },
 
@@ -135,10 +157,17 @@
 
   "custom/spotify": {
     "exec": "~/.config/waybar/scripts/spotify-status.sh",
-    "interval": 5,
+    "interval": 2,
+    "on-click": "playerctl --player=spotify play-pause",
     "return-type": "json",
     "format": "{}"
+  },
+
+  "hyprland/window": {
+    "format": "{title}",
+    "tooltip-format": "{title}",
+    "max-length": 30,
+    "on-click": "xdg-open ."
   }
- 
 }
 
