Update dotfiles configs

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -2,7 +2,7 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
 
-  <!-- Arabic font unchanged -->
+  <!-- Arabic: keep untouched -->
   <match>
     <test name="lang" compare="contains">
       <string>ar</string>
@@ -12,27 +12,17 @@
     </edit>
   </match>
 
-  <!-- Use Iosevka Nerd Font as default sans-serif -->
-  <match target="pattern">
-    <test name="family" qual="any">
-      <string>sans-serif</string>
-    </test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Iosevka Nerd Font</string>
-    </edit>
-  </match>
-
-  <!-- Use Iosevka Nerd Font as default monospace -->
+  <!-- Default monospace -->
   <match target="pattern">
     <test name="family" qual="any">
       <string>monospace</string>
     </test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Iosevka Nerd Font</string>
+      <string>Iosevka Term</string>
     </edit>
   </match>
 
-  <!-- Leave serif as is -->
+  <!-- Serif stays normal -->
   <match target="pattern">
     <test name="family" qual="any">
       <string>serif</string>
