--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 ##### Reload config
 unbind r
-bind r source-file ~/tmux/tmux.conf \; display "tmux config reloaded"
+bind r source-file ~/.tmux.conf \; display "tmux config reloaded"
 
 ##### Terminal & colors
 set -g default-terminal "tmux-256color"
@@ -37,7 +37,7 @@ unbind -n l
 # bind l select-pane -R
 
 ##### Status bar
-set -g status-position top
+set -g status-position bottom
 set -g status-style bg=default
 
 ##### Plugins
@@ -68,7 +68,7 @@ set -g window-status-separator ""
 
 ##### Pop-Up: Session List #####
 # prefix + w opens a custom tmux menu
-bind w display-popup -E -w 30% -h 50% ~/.config/tmux/scripts/tmux-menu.sh
+bind w display-popup -E -w 30% -h 50% ~/.config/.tmux/scripts/tmux-menu.sh
 unbind w
 
 ##### Auto Save / Restore
