Add fastfetch Config

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -9,6 +9,7 @@
     </test>
     <edit name="family" mode="prepend">
       <string>Noto Sans Arabic</string>
+      <string>DejaVu Sans Mono</string> <!-- monospace fallback -->
     </edit>
   </match>
 
