--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,11 +30,8 @@ unbind -n j
 unbind -n k
 unbind -n l
 
-# ##### Pane navigation (ONLY prefix + h/j/k/l)
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
+unbind -n C-S-k
+unbind -n C-S-j
 
 ##### Status bar
 set -g status-position bottom
@@ -69,7 +66,6 @@ set -g window-status-separator ""
 ##### Pop-Up: Session List #####
 # prefix + w opens a custom tmux menu
 bind w display-popup -E -w 30% -h 50% ~/.config/.tmux/scripts/tmux-menu.sh
-unbind w
 
 ##### Auto Save / Restore
 set -g @resurrecti-capture-pane-contents 'on'
