--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -72,22 +72,22 @@
 
   "clock": {
   "timezone": "Africa/Casablanca",
-  "format": "{:%A, %d %B %Y %H:%M:%S}",
-  // "tooltip-format": "{:%A, %d %B %Y %H:%M:%S}",
+  "format": " {:%A, %d %B %Y %H:%M:%S}",
   "tooltip-format": "{:%A, %d %B %Y}\n\n{calendar}",
   "interval": 1,
   "calendar": {
     "mode": "month",
     "mode-mon-col": 3,
+    "on-click-right": "mode",
     "on-scroll": 1,
     "format": {
-      "months": "<span color='#ffead3'><b>{}</b></span>",
-      "days": "<span color='#ecc6d9'>{}</span>",
-      "weeks": "<span color='#99ffdd'><b>W{}</b></span>",
-      "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-      "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
+        "mouth": "<span color='#ffead3'><b>{}</b></span>",
+        "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+        "today": "<span color='#ff6699'><b>{}</b></span>"
     }
-  }
+  },
+    "on-click-right": "omarchy-launch-floating-terminal-with-presentation omarchy-tz-select"
+
 },
 
 "custom/uptime": {
