back to lazyvim

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-
   <!-- Arabic: keep untouched -->
   <match>
     <test name="lang" compare="contains">
@@ -9,10 +8,10 @@
     </test>
     <edit name="family" mode="prepend">
       <string>Noto Sans Arabic</string>
-      <string>DejaVu Sans Mono</string> <!-- monospace fallback -->
+      <string>DejaVu Sans Mono</string>
+      <!-- monospace fallback -->
     </edit>
   </match>
-
   <!-- Default monospace -->
   <match target="pattern">
     <test name="family" qual="any">
@@ -22,7 +21,6 @@
       <string>Iosevka Term</string>
     </edit>
   </match>
-
   <!-- Serif stays normal -->
   <match target="pattern">
     <test name="family" qual="any">
@@ -32,5 +30,4 @@
       <string>Liberation Serif</string>
     </edit>
   </match>
-
 </fontconfig>
