--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,17 +24,8 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 #### Scrollback
 set -g history-limit 100000
 
-##### REMOVE any no-prefix h/j/k/l
-unbind -n h
-unbind -n j
-unbind -n k
-unbind -n l
-
-unbind -n C-S-k
-unbind -n C-S-j
-
 ##### Status bar
-set -g status-position bottom
+set -g status-position top
 set -g status-style bg=default
 
 ##### Plugins
@@ -65,7 +56,7 @@ set -g window-status-separator ""
 
 ##### Pop-Up: Session List #####
 # prefix + w opens a custom tmux menu
-bind w display-popup -E -w 30% -h 50% ~/.config/.tmux/scripts/tmux-menu.sh
+bind w display-popup -E -w 30% -h 50% ~/.tmux/scripts/tmux-menu.sh
 
 ##### Auto Save / Restore
 set -g @resurrecti-capture-pane-contents 'on'
